--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.6",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "node-sass": "^6.0.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
@@ -20,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "sass": "^1.43.4",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
