--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
