--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "polished": "^4.1.3",
